# fst-rdf-utilities

./: .gitignore  .gitmodules  EXAMPLE.config.json  LICENSE  README.md  pyproject.toml
fst_rdf_utilities/fst_rdf_utilities__python_package/: cli.py  pyproject.toml
fst_rdf_utilities/fst_rdf_utilities__python_package/fst_rdf_utilities_py/: dict_utilities.py  rdf_git_repository.py
fst_rdf_utilities/fst_rdf_utilities__python_package/tests/: sensor_rdf.ttl  test_rdf_git_repository.py  test_rdf_to_dict.py
fst_rdf_utilities/matlab_wrapper/: load_cached_rdf_datasets.m  retrieve_rdf_dataset.m
fst_rdf_utilities__python_package/: cli.py
fst_rdf_utilities__python_package/fst_rdf_utilities_py/: _deprecated.py  dict_utilities.py  rdf_git_repository.py  rdf_to_dict.py  utilities.py
fst_rdf_utilities__python_package/tests/: test_cli.py  test_dict_utilities.py  test_rdf_git_repository.py  test_rdf_to_dict.py  test_utilities.py
matlab_wrapper/: loadCachedRDFDatasets.m  load_cached_rdf_datasets.m  retrieveRDFDataset.m  retrieve_rdf_dataset.m
matlab_wrapper/private_functions/: convertPIDURLToMatlabName.m
matlab_wrapper/tests/: test_retrieveRDFDataset.m  test_retrieve_rdf_dataset.m
