[tool.poetry]
name = "fst-rdf-utilities"
version = "0.1.0"
description = ""
authors = ["Sebastian Neumeier <sebastian.neumeier@mail.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rdflib = "^7.1.2"
scipy = "^1.15.1"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
validators = "^0.34.0"
arrow = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
