[tool.poetry]
name = "fst_rdf_utilities_py"
version = "0.1.0"
description = ""
authors = ["Sebastian Neumeier <sebastian.neumeier@stud.tu-darmstadt.de>"]
readme = "README.md"
packages = [{include = "fst_rdf_utilities_py"}]

[tool.poetry.dependencies]
python = "^3.10, <3.13"
rdflib = "^7.0.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
scipy = "^1.11.2"
numpy = "^1.25.2"
validators = "^0.22.0"
arrow = "^1.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
